@startuml

title __AUTHENTICATION's Class Diagram__\n

  namespace ch.bfh.ti.academia {
    namespace authentication {
      class ch.bfh.ti.academia.authentication.AuthLogin {
          - password : String
          - username : String
          + AuthLogin()
          + AuthLogin()
          + getPassword()
          + getUsername()
          + setPassword()
          + setUsername()
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace authentication {
      class ch.bfh.ti.academia.authentication.AuthResponse {
          - pid : int
          - role : String
          + AuthResponse()
          + AuthResponse()
          + getPid()
          + getRole()
          + setPid()
          + setRole()
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace authentication {
      class ch.bfh.ti.academia.authentication.AuthenticationController {
          {static} - CONTENT_TYPE_HEADER : String
          {static} - JSON_MEDIA_TYPE : String
          - algorithm : Algorithm
          - hashAlgorithm : MessageDigest
          {static} - logger : Logger
          - objectMapper : ObjectMapper
          + AuthenticationController()
          + doGet()
          + doPost()
      }
    }
  }
  

  namespace ch.bfh.ti.academia {
    namespace authentication {
      class ch.bfh.ti.academia.authentication.AuthenticationFilter {
          {static} - AUTH_HEADER : String
          {static} - AUTH_SCHEME : String
          - algorithm : Algorithm
          {static} - logger : Logger
          + doFilter()
          - validateToken()
      }
    }
  }
  

  ch.bfh.ti.academia.authentication.AuthenticationController -up-|> jakarta.servlet.http.HttpServlet
  ch.bfh.ti.academia.authentication.AuthenticationController o-- ch.bfh.ti.academia.util.ConnectionManager : connectionManager
  ch.bfh.ti.academia.authentication.AuthenticationFilter -up-|> jakarta.servlet.http.HttpFilter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
